[package]
name = "worker-rust"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.0.18", features = ["d1"] }
serde_json = "1.0.67"
serde = { version = "1.0.188", features = ["derive"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
